Add newfile services.sh

--- a/templates/bash/base-index.html
+++ b/templates/bash/base-index.html
@@ -102,7 +102,7 @@
             <li><a href="/deployment/"><span>部署项目</span></a> </li>
             <li><a href="/deployment/file_types/"><span>文件类型</span></a> </li>
         </ul></li>
-        <li > <a href="/cluster/logs/"><i class="icon icon-book"></i> <span>日志</span></a> </li>
+        <li > <a href="/system/logs/"><i class="icon icon-book"></i> <span>日志</span></a> </li>
         <li > <a href="/deployment/settings/"><i class="icon icon-cog"></i> <span>设置</span></a></li>
     </ul>
 </div>
