--- a/templates/nodes/nodes/nodes_list.html
+++ b/templates/nodes/nodes/nodes_list.html
@@ -21,6 +21,7 @@
                 <th>名称</th>
                 <th>角色</th>
                 <th>状态</th>
+                <th style='color: #FF0512;'>IP地址</th>
                 <th>CPU请求值(核)</th>
                 <th>CPU限制值(核)</th>
                 <th>内存请求值(字节)</th>
