View system logs

--- a/templates/bash/base-index.html
+++ b/templates/bash/base-index.html
@@ -100,10 +100,14 @@
         <li class="submenu"> <a href="#"><i class="icon icon-align-justify"></i> <span>部署</span></a>
         <ul>
             <li><a href="/deployment/"><span>部署项目</span></a> </li>
-            <li><a href="/deployment/file_types/"><span>文件类型</span></a> </li>
+            <li><a href="/deployment/file_types/"><span>模板类型</span></a> </li>
         </ul></li>
-        <li > <a href="/cluster/logs/"><i class="icon icon-book"></i> <span>日志</span></a> </li>
-        <li > <a href="/deployment/settings/"><i class="icon icon-cog"></i> <span>设置</span></a></li>
+        <li > <a href="/system/logs/"><i class="icon icon-book"></i> <span>日志</span></a> </li>
+        <li class="submenu"><a href="#"><i class="icon icon-cog"></i> <span>设置</span></a>
+        <ul>
+            <li><a href="/deployment/settings/"><span>系统设置</span></a> </li>
+            <li><a href="/admin/"><span>用户管理</span></a> </li>
+        </ul>
     </ul>
 </div>
 
