--- a/templates/bash/base-index.html
+++ b/templates/bash/base-index.html
@@ -37,6 +37,54 @@
         </li>
     </ul>
 </div>
+<div class="modal fade " id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">修改密码</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">当前登录账户：</label>
+                    <div class="col-sm-7">{{ request.user }}</div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">旧密码：</label>
+                    <div class="col-sm-7">
+                            <input type="password" name="old_password" class="form-control" id="old_password">
+                        <span style="color:gray;font-size: 10px"></span>
+                      <span style="color: red">  </span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-3">新密码：</label>
+                    <div class="col-sm-7">
+                            <input type="password" name="new_password" class="form-control" required="" id="new_password">
+                        <span style="color:gray;font-size: 10px"></span>
+                      <span style="color: red">  </span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">重新输入：</label>
+                    <div class="col-sm-7">
+                            <input type="password" name="re_password" class="form-control" required="" id="re_password">
+                        <span style="color:gray;font-size: 10px"></span>
+                      <span style="color: red">  </span>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <input id="save" type="button" class="btn btn-primary" value="保存" />
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <script src="/static/js/jquery.min.js"></script>
@@ -77,24 +125,19 @@
     }
 
 </script>
-<!--close-top-Header-menu-->
 
-<!--start-top-serch-->
-<div id="search">
-    <input type="text" placeholder="Search here..."/>
-    <button type="submit" class="tip-bottom" title="Search"><i class="icon-search icon-white"></i></button>
-</div>
 
 <div id="sidebar"><a href="#" class="visible-phone">
     <i class="icon icon-home"></i> Dashboard</a>
     <ul>
         <li class="active"><a href="/"><i class="icon icon-home"></i>
             <span>Dashboard</span></a> </li>
-        <li class="submenu"><a href="#"><i class="icon icon-cloud"></i> <span>节点信息</span></a>
+        <li class="submenu"><a href="#"><i class="icon icon-cloud"></i> <span>集群信息</span></a>
         <ul>
-            <li><a href="/cluster/nodes"><span>节点</span></a> </li>
-            <li><a href="/cluster/etcd"><span>ETCD集群</span></a> </li>
-            <li><a href="/cluster/node"><span>Master集群</span></a> </li>
+            <li><a href="/cluster/nodes/"><span>节点</span></a> </li>
+            <li><a href="/cluster/namespace/"><span>项目</span></a> </li>
+            <li><a href="/cluster/etcd/"><span>ETCD集群</span></a> </li>
+            <li><a href="/cluster/roles/"><span>用户信息</span></a> </li>
         </ul>
         <li > <a href="/cluster/pods/"><i class="icon icon-align-justify"></i> <span>容器</span></a> </li>
         <li class="submenu"> <a href="#"><i class="icon icon-align-justify"></i> <span>部署</span></a>
@@ -103,12 +146,12 @@
             <li><a href="/deployment/file_types/"><span>模板类型</span></a> </li>
         </ul></li>
         <li > <a href="/system/logs/"><i class="icon icon-book"></i> <span>日志</span></a> </li>
-        <li class="submenu"><a href="#"><i class="icon icon-cog"></i> <span>设置</span></a>
-        <ul>
-            <li><a href="/deployment/settings/"><span>系统设置</span></a> </li>
-            <li><a href="/admin/"><span>用户管理</span></a> </li>
-        </ul>
-        <li > <a href="/deployment/settings/"><i class="icon icon-cog"></i> <span>设置</span></a></li>
+        <li > <a href="/admin/"><i class="icon icon-user"></i> <span>用户管理</span></a> </li>
+{#        <li class="submenu"><a href="#"><i class="icon icon-cog"></i> <span>设置</span></a>#}
+{#        <ul>#}
+{#            <li><a href="/deployment/settings/"><span>系统设置</span></a> </li>#}
+{#            <li><a href="/admin/"><span>用户管理</span></a> </li>#}
+{#        </ul>#}
     </ul>
 </div>
 
