--- a/templates/nodes/clusters/etcd_list.html
+++ b/templates/nodes/clusters/etcd_list.html
@@ -20,8 +20,8 @@
     <table class="table table-bordered" id="myTable">
         <thead>
             <tr>
-                <th onclick="SortTable('myTable',0)"><a style="cursor:pointer;">NodeID</a></th>
-                <th onclick="SortTable('myTable',1)"><a style="cursor:pointer;">NodeName</a></th>
+                <th onclick="SortTable('myTable',0)"><a style="cursor:pointer;">ID</a></th>
+                <th onclick="SortTable('myTable',1)"><a style="cursor:pointer;">HostName</a></th>
                 <th onclick="SortTable('myTable',2)"><a style="cursor:pointer;">Host</a></th>
                 <th onclick="SortTable('myTable',3)"><a style="cursor:pointer;">Port</a></th>
                 <th onclick="SortTable('myTable',4)"><a style="cursor:pointer;">Leader</a></th>
