--- a/static/css/matrix-style.css
+++ b/static/css/matrix-style.css
@@ -95,7 +95,7 @@ hr{ border-top-color:#dadada;}
 /* Top user navigation */
 #user-nav {
 	position: absolute;
-	left: 220px;
+	right: 1%;
 	top:0px;
 	z-index: 20;
 	margin: 0;
